objects/Validation_Rules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting&apos;s purpose is to add exceptions to certain users or profile for validation rules.</description>
    <fields>
        <fullName>By_Pass_Trigger_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Trigger Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Custom_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Custom Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Rules_Payment_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Rules Payment Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is used in validation rules and apex classes to prevent validation rules from firing for certain users and profiles.</description>
        <label>Bypass Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Validation Rules</label>
</CustomObject>